<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_day_scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/activity_day_LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/label_update_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:text="@string/label_update_title"
            android:gravity="center"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/label_path_to_courses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/label_path_to_courses" />

        <EditText
            android:id="@+id/input_path_to_courses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:inputType="textUri"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/label_path_to_venues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/label_path_to_venues" />

        <EditText
            android:id="@+id/input_path_to_venues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:inputType="textUri"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/label_path_to_timetable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/label_path_to_timetable" />

        <EditText
            android:id="@+id/input_path_to_timetable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:inputType="textUri"
            android:selectAllOnFocus="true" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:textAlignment="center" >

            <Button
                android:id="@+id/btn_update_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_download" />

            <Button
                android:id="@+id/btn_update_cancle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_cancle" />

        </LinearLayout>
        
    </LinearLayout>

</ScrollView>